--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
         
         <div class="imagem-coluna">
-            <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Mulher empoderada" class="imagem-destaque">
+            <img src="https://images.pexels.com/photos/4753888/pexels-photo-4753888.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Mulher empoderada" class="imagem-destaque">
         </div>
     </div>
 </body>
