--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         }
         
         body {
+            background-image: url('https://images.unsplash.com/photo-1583486791171-0f364970a8f8?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fE11bGhlciUyMGVtJTIwcG9zZSUyMGRlJTIwcG9kZXIlMjB%2BfGVufDB8fDB8fHww');
+            background-repeat: no-repeat;
+            background-size: cover;
             background-color: #f8f1f7;
             color: #333;
             line-height: 1.6;
@@ -121,6 +124,7 @@
             .botao-inscricao {
                 padding: 12px 30px;
                 font-size: 1rem;
+                margin: auto auto;
             }
         }
     </style>
