--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 <body>
     <!-- Header Section -->
     <header class="header">
-        <img src="https://images.pexels.com/photos/1006195/pexels-photo-1006195.png?auto=compress&cs=tinysrgb&w=800" alt="Mentoria Versalhes" class="header-image">
+        <img src="" alt="Mentoria Versalhes" class="header-image">
         <h1 class="header-title">
             Chegou a hora de ter uma <br>
             <span style="margin-left: 56px">carreira com propósito.</span>
