--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <p class="header-description">
             Preencha a sua Aplicação e, caso for selecionada, a nossa equipe entrará em contato para te contar sobre um Desconto Especial + Bônus!
         </p>
-        <a href="https://form.typeform.com/to/IHTF1J7v" class="btn">
+        <a href="#" class="btn">
             <svg class="btn-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38 38" fill="none">
                 <path d="M19 3.16669C14.8008 3.16669 10.7735 4.83484 7.80416 7.80416C4.83484 10.7735 3.16669 14.8008 3.16669 19C3.16669 23.1993 4.83484 27.2266 7.80416 30.1959C10.7735 33.1652 14.8008 34.8334 19 34.8334C23.1993 34.8334 27.2266 33.1652 30.1959 30.1959C33.1652 27.2266 34.8334 23.1993 34.8334 19C34.8334 14.8008 33.1652 10.7735 30.1959 7.80416C27.2266 4.83484 23.1993 3.16669 19 3.16669Z" stroke="#EBEAE6" stroke-width="1.26667" stroke-linecap="round" stroke-linejoin="round"></path>
                 <path d="M19 25.3334L25.3333 19L19 12.6667" stroke="#EBEAE6" stroke-width="1.26667" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -230,7 +230,7 @@
             </div>
             
             <div style="text-align: center; margin-top: 40px;">
-                <a href="https://form.typeform.com/to/IHTF1J7v" class="btn">
+                <a href="#" class="btn">
                     <svg class="btn-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38 38" fill="none">
                         <path d="M19 3.16669C14.8008 3.16669 10.7735 4.83484 7.80416 7.80416C4.83484 10.7735 3.16669 14.8008 3.16669 19C3.16669 23.1993 4.83484 27.2266 7.80416 30.1959C10.7735 33.1652 14.8008 34.8334 19 34.8334C23.1993 34.8334 27.2266 33.1652 30.1959 30.1959C33.1652 27.2266 34.8334 23.1993 34.8334 19C34.8334 14.8008 33.1652 10.7735 30.1959 7.80416C27.2266 4.83484 23.1993 3.16669 19 3.16669Z" stroke="#EBEAE6" stroke-width="1.26667" stroke-linecap="round" stroke-linejoin="round"></path>
                         <path d="M19 25.3334L25.3333 19L19 12.6667" stroke="#EBEAE6" stroke-width="1.26667" stroke-linecap="round" stroke-linejoin="round"></path>
